re-add plex to kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:2ubpEV/7V7iKy+nsqofQ0ESQfe8SIVcrxDpJ0imUvmBVITruM3RdXm3iH3Xm5KNSaPe6REhYW66VU34vBPg6LqY=,iv:++MHNP0rbcKpyjzQ3NcYx3huOrgPDQoE4yaJFWfOA84=,tag:NQznNKEGVzwJltZ/VSZr9Q==,type:comment]
-#ENC[AES256_GCM,data:PbHxdSciB8ofpeGlTZeAhl2q+jmlMdRD6SOXsVNUQs5fs2QJrNobLDY/PS8=,iv:hQVPoH2gu2ido7rkyGleqFIa5COt6uI4XEftG12aZ/M=,tag:HaGAbaDzB0WAbWa4RO8Wvg==,type:comment]
-VIP: ENC[AES256_GCM,data:7jRP9s4YPXgm9nfghw==,iv:egXqs8IE+YXqb5FnRjK/zwvIuOQ40txBiTTViZUmxuQ=,tag:mspGZYjKNC6AV21sT258kw==,type:str]
-#ENC[AES256_GCM,data:DzjKHYW4WPefW/aL6rQe9cY2BbSSLGGB/xVD,iv:ueXgaeInscZ0hmg1PnTNHd9Ff1WPNnP57Hev4ctTF64=,tag:Q0Qhcv8udXTxDE5LhHGO/g==,type:comment]
-#ENC[AES256_GCM,data:L6lm+wLAwBRllei4BM6zQJvXpqOT4tazwPKGa4jSdr+6WW6ieOjapHubcXj/Wd+ae5toiND3P4OZXwtgUZgNySUyZegqU6k5B2ZshOPKx32sjfBJivHnQNA=,iv:b18pJXjChdNJEjCVQtGEtfjlKEBwd7NVCUFLJsC1Pe8=,tag:RM7UpBhdfe6dEjTK0L3uWA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:nY9zbSfBrhLiVjFFoyM=,iv:at3EdQY8Z+AtGj1DYdNQLcy/0Z5royZpyELdz99H/uc=,tag:t+oVQal71xFy/zDB0HN3QA==,type:str]
-#ENC[AES256_GCM,data:SEFJ9UEpRrOivko5BDxUIcFPLZRvRqpaiQ4MHEdv25Zw7w==,iv:yeB9jIFVKxlSqYvtFY+mUUb2Mropy+y1eA2XHLf2wfI=,tag:AxdNGhs8TtKrYuOxNaDkZw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:SNlbUncRZkK2NSw/og==,iv:CJERhtpFia6YKQk3F/CwS+6dOZThGgtZqKqXWYnj1S8=,tag:QRvCi4CQH5XvOO6F9WHi1w==,type:str]
-#ENC[AES256_GCM,data:vGO7i1duB0ir2WrrrqusxcFoXaOUQTKIjlieS+hYP4q6wBgowRs/haq3j6Fne44=,iv:AmXyIPCaymdz1sb9xWOM1en3MT8wfSm+PL1UNP2BCCY=,tag:Bj1fYBhV0TLcz/qblcFw9Q==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:nxxjp7V94JaIxV+Sst9rGCos8dY1Xhyi62fCx94rAg==,iv:9y820Ox65HnkZlQ0wAL5n3DsCLPrPVDSUHNjz6BxQgU=,tag:2NVHS3331sBwFV+QjbrhpQ==,type:str]
-#ENC[AES256_GCM,data:xREjVTakqYAHpEuT72+RRxd+PCtCeQTXuuVh53Gmz8eIucjIHQZeBrRfHMcumbQ1GstGES2WlAR7wMi5nkHQWTjzXn9pENDzdPLbt+ZVomYWYA==,iv:wyq5b2kEaTFgxK5ma9ePYHlPO5yd1rkz8zf80ztmcgE=,tag:2ZUGer43Lv0YHZeDC1yyVQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:e7Q+U1ng9eIWDQEZeq65,iv:7/k3+zOS6jo7Og0rL5fQWp45qYsCMpaq+y7Mjt+UrcE=,tag:cvbH7YxkPZeNuZPThLGtYg==,type:str]
-#ENC[AES256_GCM,data:ZfNsKuMcEEHMpYUqyAmE3xtHnL5Nlg6ehwzUGlnBsUZX,iv:AHcRKOG2PQ92hogZ8Jc5ePFEexQQIMjgYX9GlJHT/2g=,tag:aQKV/nSrzwwIKycpPUeX4A==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:otxC3cuLUBJZ5XGw54Fx,iv:BchSvpe69+B0nPC/M0onemqM/YTK3P6uuul6DJBR16E=,tag:Zr39XWQzhkB14IpuGkTm5Q==,type:str]
-#ENC[AES256_GCM,data:chtdSHEEj6JnyuQDrcern5VvsDh9o3VdTv5ksmyxP7iLi6ko/JRkOb0gUWzsCfEWgTg3k1StS83Pc6/ekGILsTmgx76RH1Xdl10HHHs4wrI=,iv:23aX4C8+Y4ShtJhNc3l97v3/mQe5YGOj9MCcZqVO9gs=,tag:ZwtGIjerdzsLWELI7mL6uQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:3tAwaEl6lv6LXMqgUluB,iv:9CznS0U/NSpTrd4J7mcve7aP4aUKMCHAWXtDQvwlyPY=,tag:NkpGHr5/LBd6l9MQlotcJA==,type:str]
-#ENC[AES256_GCM,data:+Lzst2RJ/5ig+Hg1ZS4gKOsJKB2tE3O7zhotyML22s5BJcoTmB58iwvcrlSSQ13Mz7ZtngjXz+hHjnGQ8DhX6Cel9+6r5jKeZS8VqVkk3j9tZPpm5wAT,iv:3byvKr81CPbxrShUS79baOY3KIsUu3XFElTPGtjvj8E=,tag:E4iOyvCnmEP6muWUrcFceg==,type:comment]
-#ENC[AES256_GCM,data:+nIuTlDYz4sdpgYBIEbS1LJVXbIcywZyijmDRbmmg9WgymDwNPtEMQSVnJSMvy3WxsKcsM5vNxcpuO81l1YSkjbJl8Y7GBlU3S+B0aAskbb+banYvPZ+e+Bwdj6PMXFbYhlnmp3PIbUDJTdrWAKXkedjOzT800bESCAkMg==,iv:Pa9aLmP5WRD5xLK2+HJzuCVkle2Zq8/DaMTv79m7RpY=,tag:WjuzCCp+B88BWKw5wMVytg==,type:comment]
-#ENC[AES256_GCM,data:p4oANS52o+Do9ZTNyIrYBQlOwRWHiTOjQEmHlWeINHMDOVZDiy6SxvwHjDfRskkSMdUFkEKY/KrVIqUuJJxd6t0KN4uMKq6gew5oJrha6pE=,iv:POJUsgYaNDgexC9CgCaDcPWisKV7q6qn4EUAk10XNxU=,tag:W+nSt6XkXG/8CVaBf9Rerw==,type:comment]
-#ENC[AES256_GCM,data:Sv+X+hlqYA2hxKWiDr/2jUAXVPeEl4gWMkKybViDyt/ih34L+5B9uf1D8PTwh6dJa7sWh0uN,iv:RFabuTIId8Uxhz72nqRwX0qwYeDv8qkxJ7e0cBYDPXo=,tag:/HezlTk7qrTMgzh7ONyIfg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:ArI7U2r+E/S1jWOM,iv:62mvNpU3JgRO5IZovMauR+YiJBC1KDdNdk1vCBvGhxM=,tag:ll4jxgj4RrHISkESHCdEyQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:JvtEaS2b9ez68WIHYtapNlU=,iv:qz4fiWTv2bn7zdn1xg06ANgXj8RyDBYspcCg9DXciEQ=,tag:g2AJoF6Kej+G2i8DlStwww==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:Z2oTBbYSBJic9uYDRegewnBR97H9VpMzuSk0s9NRkYg=,iv:KjT3I0Y6D8a8HFVJ3J+vdieGrea/Dd4lbgoylgzQYP0=,tag:4F8+vNQQ/DumPe/suQosYA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:RwzNvpPyy/zPUr45/eQABu8f9UBVKnL1Lh4v3ocsveGRSEIcUDacdg==,iv:yqMZe3CHT8kjNnthUUqjwJd9YM3xqKYXnee8P/vI/1U=,tag:vE0PtlnjwtpcfvtrFurRNA==,type:str]
-#ENC[AES256_GCM,data:99hOH0Z5zN7q1yUjmVY9I0Cfoc7lowNgbxvlT2lzRSnoiEAo2nnpoVtDw4cQ3euQGDuL/Gyw2qywo1+ARhO/1g==,iv:hVp/lDUmbhtIsmOYjsV2IzOC/G1mkYugwiScFG5cXIY=,tag:W2F1K+2Jg3+KuoouUYPBTg==,type:comment]
-#ENC[AES256_GCM,data:Gfz6zO9b9wem7QY4sl2n6Cu+hSucYafOWpaqIBLsr4bHsNROGnWGNgdrb5yc2J4FQVxqRxQKm7Y=,iv:+8nEnVlnb2OAmmBveSVD0tw8wUHkTOc7Mbd3cdi5ZQs=,tag:Of/nNOPWZvrbQjET7lC61A==,type:comment]
-#ENC[AES256_GCM,data:qKG6M25DpvtUd3SxzbiXqgHOL2jP3a1eYg==,iv:5sR68Oszenfny9dMRrW6c/VnIFgZbYD4gqix4iTbyXo=,tag:EhNOdxH4QTTTdvqIl2zeag==,type:comment]
-#ENC[AES256_GCM,data:PTJvElmbNYMkXlR8eAvY95OKWEYF/XxRJG2N6hfyRuJhSBXZFAvr+uoGwyr1kL0yxFh4NGYBM45dDu5ncfyl8KhppEXQVox9xO2/wpc=,iv:0SZvq2IM6E3dmaAV6YkKE7Am1ZY/m0K4GQCPBYBxsEE=,tag:+ic3Gr97M5mkqoqyosU6DQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:5jZBLXJUs4k13YcSJkbBErfx8Vatki6KaAq9Vby/qjzSF6rEEZqWixpAHhWvKHls,iv:b7ZHS2Sb+yp1ka92QokH7Udid6BGTthciXEJ9me0vTo=,tag:WsKg+4wJyDOHMQOWvY4K/g==,type:str]
-#ENC[AES256_GCM,data:Np59SSS7NhA9gIUV3ZexYOifKprp6mOfeMg444urdsoMP8dBfJUmDCN3VCPRET73HGtCilo0P1EJQ2z32Ca+Yi+A/UpEKnY=,iv:Wit1DZiWRjfhyLL18zPl2NVbMhtXY0eul1/YiSqqRAg=,tag:ROv2H4kDKrP3ebnEpTz6pg==,type:comment]
-#ENC[AES256_GCM,data:cKoDTMwgdwEMeu+BfmR9/1STwEFwChFzUc9Kk3wn1QcfXniVNIZaX/idWkbzoWPLe4bteSxJ,iv:z6ZKREm1pO9zhUJ7xLH1VO5x7A3xYHWZ3kYDnX7YMnI=,tag:38ix6uAnWV20JNHvoMfrJw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:mDasaE3pDw==,iv:LnMlbWtR7vDqbkxPfJbu0qf1RAqzwoxDyi9Je401KlY=,tag:CNdnEMid1VokWTDUEWhLUQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:C6TOCKN9LONX1X4NSdprRzB8z10=,iv:ufefg6wRiY9naYNRrkn5QBvtCLdOJyd/9yCpgQEpMGA=,tag:PiJGe5gIxOF62kjBgm4U/A==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:valggl19wJ5+Eek=,iv:PFgwkm3wTjKkOnDm9N/scnmLz/IGnW8S38cWLIB1TF4=,tag:7s5nvL9F8fnrI69d21PXwQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:G7lWHPjDb+bfWlDd/13G,iv:sbL+oudRzT83bRmvZxwYwZ9m4sJePh2dz3BndNhViLg=,tag:AuDroBEJb+HADKvRqGgaOQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:0O5a6jPVQh/fasVQ+UWIg1qOONFWBuSF9g==,iv:1hbzUs3Xp6fm8Ztll9DGctOyIKfR6Yth2DtfoTOFhWA=,tag:8Id38vWJQONf78GmdTUNBQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JjwBELsi9/pS3A5ByeJXODhMnUp+MUBJ,iv:SliewKkmJgHmO8XJcvdJ5uWdlDZNlG5FfRzYu+Kjca4=,tag:JoMdH6f1KmtD/kquu9uVCQ==,type:str]
-#ENC[AES256_GCM,data:fuXjnfcKGlenw2/jplP9CB7Mmz+8Xxtwu+mhd8fT2sTzJ/yXm6A=,iv:Oki1VGFndI263EjYEheKLSRyqKk9HPD+v3X+/fNGJ+0=,tag:u9PH4y5s2QiPTgH01fpX2g==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:BoKZYze8MyzXOYVsWaMwm28kYlw=,iv:s2aMmZ747XCDIHJWE558lt6LRr6j62JhW8XPJAEm6HI=,tag:gd3cMFOSumYsndI/OI8UpA==,type:str]
-#ENC[AES256_GCM,data:YjlJ7WLeG8Afdd3Zi1M=,iv:JTAInbTFU92gvHoo/qTc82r67WdMkFnlnQgjZ8+TKE4=,tag:66Gx83j4EX+C6/zrk4ZMjw==,type:comment]
-PODNET: ENC[AES256_GCM,data:GTDjKAIqta71OX4A4Q==,iv:kJQ0LFVrQOCKqHw0Hzi28WVFhhLuHJ2I4Xv+U0V7b6o=,tag:dlfaCo0776ddRl2SdT9F1Q==,type:str]
-SVCNET: ENC[AES256_GCM,data:rbywuHlTdCYbnnrgUw==,iv:HsmQnhvbuFZnznPKrinhKh1KMNf2CYMQ7lXuE5wUe+8=,tag:/EQGmJLFTWwfT0kqr0s29g==,type:str]
+#ENC[AES256_GCM,data:JL++kS2XNZx+W0muqffPuQC+cUMUMDbpldwhuEQQhETw12awUqUlmLYgwJLDhj7bRBzgzEXnp9KczaIPEDcCHLQ=,iv:3MXmkgiUWVL2zQuPSxAfn8Mjze14I5EAviW0SqcxwpM=,tag:ciyOHXqnNVcBQjGCTnAh4A==,type:comment]
+#ENC[AES256_GCM,data:xSQFYSngZsUP5ufGNQH2cldbVDO2P+VDwwlrOC/tL+PWpVhx5js+ScxuyC8=,iv:VM1jAXoAULTVSX2LdXo6tXZw+UBhR6rk86q2tsoTXhY=,tag:pReX8ghBaN6QSQeR5vK6uw==,type:comment]
+VIP: ENC[AES256_GCM,data:sbTHGAx2Zy4C88y5Aw==,iv:ZQ1lkZIPAQCyIDDkGw2yfxNL1lbwypRYjOgv+tKnFgg=,tag:WAq1yWf27OFcLPmksd4AMg==,type:str]
+#ENC[AES256_GCM,data:r9duCReu9lnIMhBUo26hjo7vURP301jVakaW,iv:8LXG4yZeYj0O1tAkdXQfX/EAuBIbProI+RCzFreR7g4=,tag:ROA7Q/LK5e5FfDkL1SMS2w==,type:comment]
+#ENC[AES256_GCM,data:ko3TaQYazPixNfGhokCxbuHCOnQ3gCKGPbPe6kLrjP/1DdSTTJeWbQN9goRoNrl2NGXf3EQzksbkPZwEb+AIt7dSbT0u/ke7jeckLNaIdE9EPU+AklPLR+E=,iv:FLtTIACUBwfSMZeZW82uJqoSlO5OULu3W1fiC7vp6L0=,tag:tlOxORtAzSrqXXrbS1k2Aw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:cayniIfC0lnta1RiyWI=,iv:ipTtXYynZNWrZ6Zw6cYgTjtmXP2aeXlrethQE+hpRG8=,tag:qLKC77HgT3klyXbZI+S4wQ==,type:str]
+#ENC[AES256_GCM,data:0P0jnPvqJqQWX4RP/ckw6etqWAVKQZ+2TGy1NL69oIGnNg==,iv:9UM88SRH90rMjSYqXc+uvGx65pqqKv9BdNe9n+iDCwQ=,tag:0Se43Wi7y+xZskDKN9hPrA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:zXxOKQamPprh6sLvOw==,iv:FEZUl1omXreXlOJCluz0CTTWhPwk+juR69utkAdLhnU=,tag:TeGDbgtfRGzucKUVqUZSjA==,type:str]
+#ENC[AES256_GCM,data:cpxqjOHOCVEzOT/ZUj6urjWX5+CT6mLTz5Jzb5hiizg0AWUSz6PfbfD5JmtET5c=,iv:ztpo+UbtKL3MGSfGKQBRs4JCJ29jJW/ZhpIbMWCiLM0=,tag:xL37SLvLEh5i1W61g1GjqA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:LiEiCnebOpUF5bBP2iZHCAeMd5420tVj7VexFzP1GQ==,iv:/aFMl4i5Zg2sa8mX30fxO3vg4L8CqAUvlaeUknRULeI=,tag:Wzd/HVXC7Em4M+jmfPBFpw==,type:str]
+#ENC[AES256_GCM,data:rnNEFufTC8GG+EepCO3HKYRHle+tQCHLa75bXlWrkpsSNaFQiyrKyioF9K6YlNOs9R9k+FB+qZlActVln8vgIcVa4Dpdr1zhY6opwBtDB2/QiQ==,iv:SeaWUM2AOM/ZWQrALzuQGX6YX9KCuXayopX1k3ckhHE=,tag:HM8saY9575SgZRFB0i75/g==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:2GeQyUDcggzYlrlNLiBb,iv:cS2dQLm5Z98lVB9GGrQROI/82LZnrKpCEuS0HJhdYPA=,tag:bWT5FHICsClMfhOOzT/KHg==,type:str]
+#ENC[AES256_GCM,data:4gRtysZM5MHolSsqPSiwW5DO+C0FmEIX14dpXxMA6qSO,iv:89r4Qp5LE428Flw8JstSoQwn/1Ayo5F8O0qz3N1Npmg=,tag:bfPo+bqxU269hfGGhKr1xg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Gos4RHwo7PnqrW+2qUsH,iv:YIdzPAkGf7QSV4dsu6VEORJOhFWKkOZ38lwacHvnrDw=,tag:Kp1YMME2K3NtSOtD11pujQ==,type:str]
+#ENC[AES256_GCM,data:SnLZY8GxIb7dPKDET5X2w4HyMMRyDcnViE2JTunjgilWEl0sD6SX7RuV58ks6/b8TFk4CpotxEA2SJAejQ85tY+niguidAI/OSbsOD08uJ4=,iv:Vhnx7RnMnN/bTQkvk66q2DNQfGjq/spU3Wy1nlmp+JA=,tag:zf9iNFe42GqKu748P3itBA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:xVzfXSvBuWkoFFfPAfML,iv:n+5ZUkVKSfdt5jPZotRjn8H3+zjdu3liVSK7cfRu13Y=,tag:2MX87H1m8TRpHj9XLmAvtQ==,type:str]
+#ENC[AES256_GCM,data:nxzArbiU5st97EUlvgbnHxVM2Uc3dAF5xcgnxHGtPEImBDgjY2mYRt8yfLL+xHh9rgRjLp34cNihgPkJeKLs/bglfB02Y8jJ2RytL0bBLIjseaLUK+0M,iv:VcSRfdVxoKvDEL7LKVZOwSi7wMUFijmHJtR5ugme2RU=,tag:my7CrwcszfbYgq08vIgk3Q==,type:comment]
+#ENC[AES256_GCM,data:X5VvJQeW+di2cW7j8X6yR+suUvOc1zUgvrhM5kl71tpduvEe070XXKUVLM+vfaWLCz1kz6PrATdBLqCEf+FffXR2X+zO628CgFdcAylD4bVmG4eTPdWdy3xs09Nn5ksdqDmtWLJmG/w8+Sr4GEe+Zv3vW09mBBzNiUaZ4Q==,iv:3u+q/Z+1Texw2JDQXEJF69Q+HHKwtL/hkAt9KTLYtLY=,tag:LM9yPRYP7LgzjWvXhY3gLQ==,type:comment]
+#ENC[AES256_GCM,data:zP9UP4LXcpxrEW20M0SPVoRz/RQJr2gOLY1EtC/gByih+wZNZr5tNjTOujVBPWKMG4ur3/zS7hRYv3Zp7+sd8xpk+8KnYZgs0JFLv+N8aUc=,iv:gUM1C9eNs0p3va4h5rLYk9jYPAe1d2IM8GZ55EgLGuw=,tag:iNRn/DpJGQQSfBXqj0yRPg==,type:comment]
+#ENC[AES256_GCM,data:uvwAgEcJQHpvqPxSRHd+V12NIb21bdvdRpKRknC9ZXosJ4vgwuVzjcA7Y6ulAw4bVUGXkAHY,iv:BBkqkLRF+hFhhJFTpZJLvc1BnxBRrpcyQK94qmf/lm4=,tag:ph8eSno4DmYRoqe593Wnmw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:MckAxoelWUFl7hQe,iv:0hshb9kdXuipErXp6CpH/++dV5wvlooxbnrzIUsRrW0=,tag:SRmfD4mhhiqrUheyAmBsvA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dbmYut/Pch6GKYImHPyzb48=,iv:5eGIkIcCIXAcGk8YK9rJe2/QG6IThZLkEj3YvVPNwi0=,tag:9iRlJW61so8fwjS/SAsmdw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:TFyMn4c/ILbakK1mz3+pv+Ry4YWB4wKk3jGecqHBoO8=,iv:K8Va3AOLv2XimfL1gi9Pm1neG7gsWj0nUxiiYFBunvQ=,tag:EO4R5lmwsBpvRZvIfFJd2g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:GztkgVIa8RXpaggW0MszXguByBdemf/I35COlLc0fNmQLP7nHmAGYg==,iv:jcOWZ1DlJg7o6skubY1vtQvOsoD0tEXjq3uK9EqOdYo=,tag:Ovv061jB0NAEwaWhuPIwFg==,type:str]
+#ENC[AES256_GCM,data:oHrlmYQ4raOSvjmm2a8rZ47iVs/IRt5MgUM34wZ9Qr3ZgqD3G6yTJxJMUiOI+NWZWuFCLzPOX0u58afcpZATdg==,iv:JbeBwr7GB92kd58qzH/1qpqAvzCmqtlIgDuNfdo5Kxg=,tag:o3iw7/akTtYYy5Mja2LA6A==,type:comment]
+#ENC[AES256_GCM,data:6NOOZonX38d1YiLcAXykNNKeVX0xw30Q+QfuVfAZvfgTgRLpZA7Rw1sxqyyDMIm96Eb30VXq8No=,iv:uT2FwbYasKdaLogFlitfxRMd/QrsISkcsiwkNYyA7sg=,tag:UpKrUiTL17u/2NElRySUIw==,type:comment]
+#ENC[AES256_GCM,data:ufPb7uRYsrIDG6ZEOPBrS0GL1zT7WgfWAA==,iv:RRc7XHLI3Hfhz2sDjq16mbK1szY7lRtvTMVGYS5Gl4k=,tag:sph3b83UJf2PKewvN5uxJA==,type:comment]
+#ENC[AES256_GCM,data:7tnAQdlBSemFzosDXs/Lv0ZAEMGJFZdxwJ9CQj0yQ1k598OPNUp6xr8px8PTtRDqZEpeZ0UFTvk9+pQIyC8e+nj2U9Lb6LwKks/OfSs=,iv:9DnJ4u45KUzII/1LnD2XikW0YBkeh6f9NQGxTO0zIjY=,tag:mxdkT2Mcr17e8HH4j5PQ4w==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:f4otRrFgFD8R+VdRmi7Qgt0jgWq8g3OB7r8WJsYaCNk/RJEB5uZ+dAZ4L5avWmso,iv:Jyy89ulPFDnmQLStDLiLepY/yhBemHnnhoe0KAO6mDg=,tag:tEQAGfOPFmgvAEebYaBauQ==,type:str]
+#ENC[AES256_GCM,data:fEQ/NWXUbbKXGEgmnslrCLpqBWxpmZtPcqeAbI7UIGb1udD5i2W37+lB5Yw8O3KxcZQ+R74p9yh7e2KzVipkN4TkkCuM3ig=,iv:YkNozjU61b3yHSNCfF303j5r2tdwA1PEokMPxkV5B50=,tag:AWiMYLYZS0MwbEz5oMg00Q==,type:comment]
+#ENC[AES256_GCM,data:z5jwqOLWLz75D77CTDpV71erhwuEeBHXCvd5JXGn5PvY/xcnydeb3Pn4CMkHSNTXQF3/e/ob,iv:UViRuUeD3dTYUH93hEfs0E0DCT96u5+iH/1ppPzmRbM=,tag:K3XY6tJYHPKBLZ4OLgRQ+A==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:2NIXJrkclw==,iv:pxIzVPbI1gsa8hz/B3H5X9G62Pxykq/SEwmLdjTSM14=,tag:MMKQ389IWqoVfIokiCcaxw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sww8ireSc9Niwpozc+LFKMTokAI=,iv:qZa51rE86/9gTqaYrChvoFMtEMZAVOC7ifhrSHFKj5c=,tag:1pa2VS8M400Vpk8PJVzHgA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:DN4qpvURdOQkdB8=,iv:JGpN9YRjKqeee+zY2mYriuarrlrcdpaoT/E0W4biGNE=,tag:F05bLynVW86XIcaIcZ6P+A==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:9Y3YihYs2lOIO0BYuwOE,iv:3/r3zyI0ThrXHHDgnWpZKWwSo1J3hlsEoMd5Z7jJ90s=,tag:GdBndRjpsLMCBIvZ/ImNTQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:r58ONc2XJ0wz7hXoip2yum502kF5W2TGIQ==,iv:bFb8Ss2BAHLPH4zR6wSM1mi4zx+f/rNvqc2KPi10iT0=,tag:bCw5fBnzX/2MYwhw+cvPjA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0hXKfIU7nWqwRiZKmFEP1vTmf19w55MV,iv:IkDpZpcKoYNsKAWUoHnWQQPgK8+Odxxo6zfKeMBPsJw=,tag:qI0bsjU6NEis23wfLyqMgA==,type:str]
+#ENC[AES256_GCM,data:HVZfRZ6VssFAHAtjo3C25qK8KB0LdPqVRhXUKc30LmAADCAi42Y=,iv:aV/jZmZ+Qz6GP5IWDrJJIkCeGjf5aNjaRHBaE3/aVKc=,tag:voo8fy6A32Do4j5SEKyFHQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:KWTarPFPRFFjWhDlt6L4/vf1ENc=,iv:isePo8m783A0D/SDM/RQFraZGYlETbD0whKnSF1veMs=,tag:Abzg9ahmd3+15mGFSlYypA==,type:str]
+#ENC[AES256_GCM,data:IPnzPhMCoaFJFsRlOh0=,iv:vwSiiaojpFC+49LRjKgBq6E7lRLJuZ5J8p9RqFmBZHY=,tag:aQusL0U6waC8iPfodDYuHQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:Yr9/vfdiqEF/G4NWuw==,iv:cq0O6ze6XhXdL68hjMUZcHHSKpSMWfyQAf2l5nIJbb8=,tag:szSNJ8xZztwuxuOeMozqqQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:TrAvZdcsmfocVREpVQ==,iv:FV42uiA7rO9H1aa/9ED4RpoVBM0RAGlKzIbyMOERQks=,tag:5D/M25ilGUlaMMDHjUGNmg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5SXhBdExXanA5RUZHUlo3
-            aGFyVGZaWXVsSkxNZ1B5SDhqM2RkNGZVK0NZCnBVVlh6Z1B6UmR0MzBSV0paU1kv
-            ZmMxbnp3eDhSWnNNQTlQT0puL0tvL2MKLS0tIFhwMGZEY0RXQ0ttQ3JKclV4NGNy
-            NnFjaEc3cEUvZkNJb2ozYU1CSWNXMmsK5uG2h3GXBOWJKgE4yXVTcr3uOukyDQrI
-            R7qY0SlUc96X371F9KJ1mJntwt72geYmXvtj/EvonAtK8HxWU1cy1w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvVGJEQjBzNk9mU3lTUTU0
+            Y0pEdkEyVDRKVkNDdDdNNzdRK0ZPM1lyaWs0CjJYRkIrWGZwVnRHeWtTa0F1ckxM
+            OG5kbmlXYkRrcUlENmFyaUhlUXZvMUUKLS0tIDVmb0xXamJiaFVjV2ViUlEzU1B4
+            TU1JeG94UDdabmlYUXhLZ3ZkZ0xlaE0K69jC7T1mQbiRxbW3eQKp2W1dTES0Lf9d
+            +Sh35y5DJPQgp0wa/u4AqErNztRcd7nezcvrnTR30D9yJPqATU11qw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:46:27Z"
-    mac: ENC[AES256_GCM,data:MQr2f9eLkTTRx130Qv8PysZRinShR4+5eEHqcR6deax9eOKaNVWVabJtxCgbOarLYdcx9YM0tKYzAi0Hg6L5h5CfmfIJDRiVUXwDUt0wSD4Bz9vGyQ/Mi9nvqgF0SGlDyMjl7ByHUd3qRkQnn2x+T7yMDLmXUhCu95Rp7tBW4PA=,iv:nIgyr2coDf3ui62d0i5zcSoEC6tjhn09oEXorv/l0oE=,tag:38M3EwwmSqnCwUuJr80/5A==,type:str]
+    lastmodified: "2025-01-10T23:48:01Z"
+    mac: ENC[AES256_GCM,data:6tDK3dVBW91D6hWYEK4dZ81aSb1VcLVnThoFIN09vxuk9upGBSy6/xfgxPzrPwZnXVlcHxssLD/96r/nNAIRoDwFJWGocM0xi74NovMe5PuwcfaHYH/YlLPMLGusnxUjUk5D7FFGVgbiegEilEiIdwT/Bzg+2NtRnYHms09YgC0=,iv:prJMnG0tdYOPjWXwwZC2E8TzkgOnVDrFqML6GpUMpn8=,tag:1NNNCsWCzShOiTsYBWMQGw==,type:str]
     pgp: []
     version: 3.9.1
