--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:LTIme3/jzT9P3c9ytjPWp/xaLeYwvXnnom2zFULSYwcszBnaEDMQmGFEdyqdbKjFC08aL+AaKoc/XyvwvVdUT2U=,iv:PzeJYFeI5O5csxnKeA3gqgqdeOA0jr8bNFKkIKeTLtE=,tag:bd4rlOPNaOIxKfRefbDoew==,type:comment]
-    #ENC[AES256_GCM,data:eTFHToWu4DYrxhu1OhbaHDgDiGfcpebbVXjJoLZFDNlO37Y8zgDFr3uxums=,iv:3fsVzYMcw7poEuZ5YwPPTHshtSrMa7ckz0O+g8KMNuM=,tag:Kf5LavzNgC/PaxGwviCZfQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:9N1dOo/RXKVbzxGhxw==,iv:juixDXT/MOwCOuYctqncRdiG+cZs+u/mZNj0mgDS/kc=,tag:xSTe/5TPpNWjfereQLoaHQ==,type:str]
-    #ENC[AES256_GCM,data:9oCpWhPg9hh0M1r+tBL96pm7JxVdADBCjs2F,iv:s0EoatIYocfe56VsIBfgpF1JbGzKMe6YRykKTBPSuOo=,tag:JdjDS0ROLKJp5zDX1+t9jQ==,type:comment]
-    #ENC[AES256_GCM,data:Ki1r/bmwl4d8jgGmXxfGedTPIkLeoZNKQkCGrDEF6SJQNiQPxqDgEy/fGqN46/cwYCQJISTP6r9+aKvJMFKgMTgWkU6ceoHZ5v1THsz2g9vxs2QRMiC/QmI=,iv:w+HLChQv/GUtu3a1G09MRCPqs8Vec82rYZdY3BMa6LU=,tag:uj+fu7UTUtsAv/RC/udDqQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:YMFjPYWnVf292mX770E=,iv:CwL0yP4upS0YQ143KWqwta4G4wAFNVv3rLMb8KJO67A=,tag:VUZWogVfoF3PBvbiG+59LA==,type:str]
-    #ENC[AES256_GCM,data:hxOGKRWHnPcPU8V8KHSsU03tUiEvz3MlzsL+fnN356NSaQ==,iv:XhIdOSIykQPfYntki/nYIc0SV86KTnfnKAgIPYyIiQM=,tag:jXw0ACIu4ZX+t1vqvmwy9A==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:s1xgfOxQBPo5GB858w==,iv:SxfiU0ag7s6ziqbL2xjEuTS1xJTPJ+vCKE99fQKn+KA=,tag:ARbM/4CvChs7ltsgKfVt8Q==,type:str]
-    #ENC[AES256_GCM,data:wBkVBaptfB2AmHyph5k6OeJbKabP4CAkGdzDImwdfZ5/OWtwZpLFYMDE85ZBP5k=,iv:WWN9ZSSHivLIqhUcJuh1v0Euixdf27YavXAZm9xiCyg=,tag:IIinPzDO2nM8+1/dulTb6w==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:FtjdF1V2YJ6uV94yUsx8ZniMlYqo1jmlRXCpLsfkLw==,iv:Rxirpam3EQuzEYzwf5+PJ0W8FkpPhc6ykJsXZ0ecgbg=,tag:UinSSCZaI1oUWTc0q/N+cQ==,type:str]
-    #ENC[AES256_GCM,data:ODJL3IR56P6Wsht/V6Rar9k3svszk0bM8YUhew9oZVCywCSm29NHK9mF+f+vSD4wVJkZm9ZjchKWHpqE/mNm+gkuGXMX3W6Kay0kTS1FBEv8og==,iv:RobBVIVpI1m5XxOGQobRC34Cmy73nZFFLtFQI9Aygnc=,tag:2doSooMdYaJMnApj/IMWFA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:UE92Ox8i8HoIiP4HLL6p,iv:/SqNXGlEGH902P2YMTgQOH3AVxOdu8v27xR/bMB4oxs=,tag:DQghdcUje86zlfowanDj0w==,type:str]
-    #ENC[AES256_GCM,data:k6xx3//4s7ozMne43keR0+zAAYHgU4UpL8ah8HK1MBY+,iv:NH0EHyCUsFA6rdeCKJhg0XXd2m2KDZrdjpxLZAQsOE4=,tag:aReRVe+XrT9yQpaC1/rqmg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:GFcu4YUTgCwy/DGX19Vk,iv:KTyY7sDvKK5nQkXnFzZASbRUOyr96JjicXHg3sDXftQ=,tag:zR0hVDhYd8qwZLR/41PEZg==,type:str]
-    #ENC[AES256_GCM,data:+cJUTODPJPcPolnF91yviDnt+h1clYwPhvfOBzKfUzo4Xr47UOAuH/4EjpR3Ex4z16BaO9cTUOWS0W3/FojvMWWd4pa9S/j2cqyuFCBkFJg=,iv:NRRl7nSsRDcEefKRCIw8JNdJe5mxcihHUwRajYnh6ZI=,tag:oHRgG/zLawc3gku59Grf3A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:TR7UVAUsAaiDg/RkLHVW,iv:hvn7E6wjzV9rTUMLdT6rFAASwUOpd91YBxXEFmiVIG4=,tag:1Zn7ff5jvNuP3UX524AYnA==,type:str]
-    #ENC[AES256_GCM,data:cPDhmBapijqja79gDSBage4PQCWDxq41mZRQYXE8hxCeN9VyNSRY6dxCa8pgx//kBSrsRvx+rHLY0aTVn+q7PqoSeGNZmM6xBV8XphSlAMABxejYbexL,iv:Rdag50ZGcQSjjpvFjF0m12AlHYH7Kbl485jDs8HVqZY=,tag:IQxN+H50MyWh4Y3KyCoCVQ==,type:comment]
-    #ENC[AES256_GCM,data:bXGhFIgU56tBTfJVcN7lGq28AdSx8oNcKojnRxEgrUF3pzfpdj1PTEABmPdCPHSWcxPxgOClXzF1g7wK+RijnkuZ0orr9jhG9g8xws1VtMw3cwHe8pXyKPJutGfboLzTHChgQYulZn5Qfbr1dxSk8Pq9mf/jqv2xODy4/Q==,iv:a5rI9Zi3IfavJHaO1FQZSk9cWfPYcNcIgunKYX12nXE=,tag:1mJ3xeXHhgmNTBVlifkWLA==,type:comment]
-    #ENC[AES256_GCM,data:0Gd5btNPkOsofOc/nEB1QqD4NpBNBXFuSuorr3MCtOa60udMl2ojZiPhXJ8/ZYWo9pokrn3dvhx56N9emgVyq8tBA8UgxjSJozUocAEgxWk=,iv:VMMzsewq2Ke4Nsg56p8UuvkAjRbFXoQ2WSRcRpsOsZg=,tag:PGfol1cxFjhxyjXXfPQfjA==,type:comment]
-    #ENC[AES256_GCM,data:T4rXR3wHW+6Hy37WVgdueLaKQk6N6lOpqbIywRjw6lAqV3lJfFcHyDvjAyzJY1u5wa/EJULt,iv:y/DQETA6pjxWWsWSeZ7Wi62CuelL6COyZf7YwaeWgdU=,tag:kyZSDwb+wsidPZcU1rRGwg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:dGu1/s+qZ8KvwnIX,iv:Ybhkssw2QpVYnY+qlIUQBiV9Heocp0xw9aqTksy5qqc=,tag:9J7GZQyYF0Mk4md7y5E0qg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:gMDAjU+Fbu2WYQAZUM2THpc=,iv:OSzFvkYj/xFZh7b54JIEXNG1C+GJRxN6hvTME6V0ll0=,tag:DPwP+WLO/kjyenTINd/OzQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:wGlOTTckrzL/MjySauyMk/KUBZnvyUaiYJJtkp926+c=,iv:dNlbW/TKBsSKbs6Uq2SEh9tMjvAuguxcaVJkuplmkWA=,tag:E7fXSe1GkOQtGwjl+Zs57w==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:xWvPVbksXVTxGkf4a4ogzugp+6OPe34IGnEC7c7o+YH9rR7ru04q4w==,iv:pZgZl9LWyFSrRF82WdwJJM3dXBMvhwSLzg4khvFGwak=,tag:ThjZ5448e/WL7wR7TKoEJg==,type:str]
-    #ENC[AES256_GCM,data:8i0aJhWlgf7JpVpUe+thD2WQRnIQoGCxZRXwMMN1H5XNxdt0CCC1BYFxAeA+zSSljxvrzd4luwbWYVP3+5kHQg==,iv:4GFHQK3bAg1k9dG/zg3dtJI4svUJ2kTkIohrGhSoIaQ=,tag:+vuYczVeZMLlJr2u0PtbiQ==,type:comment]
-    #ENC[AES256_GCM,data:1kvpp/+wj8DV/IhjUbmlf4Sm51u/MZwc3oiBKMSxZY2h1ZMBE4i34PCCRwhuu/c3RSTkOpq6+WU=,iv:POiQCdCbDx2nV7QvQA4fgWV2lfvoRly2r94nOhid018=,tag:M+Z89LaW1tro/5PjHBwk1w==,type:comment]
-    #ENC[AES256_GCM,data:lnFhZvGHsv6J4Ve9LTYAK/pUqDKfFC+hQQ==,iv:6EnDnwec0GNbmsa3q2CPgQkizBeTX8ti60iEJ/gTrPk=,tag:RN+UbgniqF/o3i2ytvqGvw==,type:comment]
-    #ENC[AES256_GCM,data:mpvSoI1g2TstHxP6QFxsAy2Q60ibBFwNxbOokAYBYmr+OovuJLP7teL725l7iCH21c5HzX8HCnB4TdiWcaeDfUJIOUZXGKAQGaByB1E=,iv:TEuyyMSb1qIMtoEKFFILtS76Kki1u1TC1IcyuYnO63I=,tag:2DuyHwiA8fgt4fAULk657w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:zevhmG219JzWHKG1s9XYGUlbDb1/Ed2qwF6jYXiGtGNAaHeJfTtvPQDHs36mwUs7,iv:/9+mkH8kg0/6hSp6iyIDX8A/9oh3wciVjLsLenmblRs=,tag:oySiCBEP7XnhrN07lr999Q==,type:str]
-    #ENC[AES256_GCM,data:siTOiM9+zHptEi0bMXAh4WsKG+Yjl09Zt+r4ghGjXjC7GeoW5aHDOR5g57+zVmauR+2tht4SUQRItRVMdPBf2n2mf5Dj4ys=,iv:bhl9BnEPhPbnP4secfbiPwMlmp6dBMyPhCH4zQf+deY=,tag:qtHgrnhlQ1kmcD2ECYj2HA==,type:comment]
-    #ENC[AES256_GCM,data:ty3FicHEQ5uLITe559o1JDOll1fWHC8Y7Xthp3LB0D9TWyanu5xyvKXZ8wX0Jicjjl7n8RZ0,iv:TYBM1xlrzTuX3sIGVI9QciNnMfFwxJxgLc8J7cYNNh0=,tag:zIuxEb3XNEiCyS4XTt9Iyg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:yxfAPbOmSA==,iv:ASKQF8HOopah8J9ugz/lFPUnxfvUfIbT012cbMSifbo=,tag:3uRdvmSpsnQ+YO7hQnfIJA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0M09+IkgH9C71kGaTJy8OSQAGrs=,iv:nv+phbYduXf5TG3rvcnRTkoquk/lDUOXosb1t2WdPgo=,tag:ThDpDqCKOcEIVWsAT0jJLg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:e5CNEg42qfETJr4=,iv:qwlBl0kaKM/vGtZGXkcmQEGHfuobecIgYFTGvAt9b8U=,tag:qmCy1AaGPgXTm1PUeIvGYg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:94s9aeNGcm8lIqnah3i8,iv:8V0RzJZOcscCSsDFu11Lp8f8TMoVRzjAwpUpLHHAETc=,tag:o+hOUm0dg2z48sMdULb/zw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OEJ9U8JoJ0EPwRSkRnNCbS1KPV1sL/sknQ==,iv:Aw9mIJg9l/EcS0PHIIlGlrmuGq0QpaUA46NcaKBOYZc=,tag:2HgWnXDz0I/7P2gNDk5MdA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:uDRsgj/Y4/yntVX2TS8V+mcqIJXIepXI,iv:+lxQFxq9eMUBMiak7Tp3EWcvjeF7CyJhse7x5foHggE=,tag:7mm2eDZ5IjEexNNRbVgviQ==,type:str]
-    #ENC[AES256_GCM,data:82wPBr4D5p0g75Co4a1SnPLNycWEQcaFAvqspTZDMWKLdrir3Uk=,iv:rmQj258uBFk43rWITJ7hWiSG0ogecx+6UVgWnlooojc=,tag:ak/mm6CT4bGSaW7VUmq4ew==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:tQw0ubFEy6TT9AKC7ocV4hHgXQI=,iv:/55dUMCE7gz5x7cqE9nWFH7ATvSDyzx6cztMSed12dk=,tag:IIvb9HoZo7uM7FIzzPMZJg==,type:str]
-    #ENC[AES256_GCM,data:+CotW0Up+NI/BcntL4w=,iv:YaZwCvCW9CP1oohEmq8OHJdyhATJgxJCnfaqQC24upo=,tag:SCIsqPeInTBF0mjBVxJa+g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:ZK8BzsGR9wboD22x7A==,iv:lkQML3doNt5jBNKswan5Px9OCie2JN0Y11KFBZ+VdD0=,tag:jIxY4KogljQmnKuuUYhOKg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:EFkQ9FFjZq6749lwMQ==,iv:12s5cf/ox9uQRoCyvYBmuIK7crQQnarhTfL3yk1oXYw=,tag:ughJBRQHuPxragt78atc/g==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:8dlqfw==,iv:Inl9xUx109cWHKt9HYRbpYkNr/Kn09n7Cq9ewB4vaps=,tag:UBvX7cdSllCHTiSmF7kdDw==,type:str]
+    #ENC[AES256_GCM,data:r6X66m4SpQOQVtJss5/17td1v0LP2CIyeLk47GYuzCYi6LhKZh+gC85z79BipbKXt+SsSuqWXiLszMME4gJi6EU=,iv:93tmf62gjkuOHTUd4Z9VR4WXxk/i9s1K4JznHY/ifx4=,tag:JfNkGPcrVn100CGwZJ2L7A==,type:comment]
+    #ENC[AES256_GCM,data:bDj5G+sX7OBTkCmndjvF+TeGSK9C/cRyDL2CIfrdrAs1+ZrEqbJvsuEVgvA=,iv:mfKcvmwLfZNjTAdr13jy1aw2lej3Y/N7YMNeYa9m+2c=,tag:xg6XEyqzCAczEDMSVcbUfQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:oNnHQY+tOE4yAxRxtQ==,iv:phs30djyLQKkovij+sK2jgLi+lUamwHSnYFZMN0EuTY=,tag:AiXrWvCp2DfbrdWGr2gItQ==,type:str]
+    #ENC[AES256_GCM,data:J22P/vaA6gPe6UhcBspBOO9xNkmXbq3d64Bv,iv:J75kkKjH4MKi8R6aPWZdMGpWRTsEnx5JlUfFvM/V4kc=,tag:2xKgIbLPfEKG+0ln+T9huQ==,type:comment]
+    #ENC[AES256_GCM,data:KB/sZkylpwkcfau3TDiUT2k7+Ma/jlLYkTx2XdD4HVegcT50Wf3y/Q1bS9Ma6eVs9no67ZZTl9UDeHutI7mUBP3hWh59kEp6jbX54gD7VJ6jZiac5HU884M=,iv:UwPnAtdJgXtA/seRprUsQWyULHn1yUDP/Qzs2S7rftQ=,tag:fNpBsYS+yfDaPsnJJkgMrw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:lcczw4R4URn5VC6fr9g=,iv:tsgVBPjw9ApcvAKsnmNwuV+IO5Ne8OWitjBiSBSBScw=,tag:Pyn7xIcoXAMn1t+n1Vul/A==,type:str]
+    #ENC[AES256_GCM,data:610oQ6mLVB/YVHsiuA8GBaXaq4R+uV9Ks6zrDfhfeBmZJg==,iv:R9lpkVrxkMSRQAsg7NyP0b1RxcsLnFqfRUAuzXhfnBQ=,tag:vhBhDKC2carsa+Hme/CtBQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:TlUb0cXEq6pqQu1elw==,iv:OtOP++XEma8Qr8rH3cnhUN5zPUb6u+Bw+0iW7NSDun0=,tag:mWD/SEMBc/BFxqDW4keD0A==,type:str]
+    #ENC[AES256_GCM,data:qRvBdp74IBvqpu+dAOP0TGt3AO7dA7Mwfg0LdD7nPDhHeDxa12Wgd2gB8hYYiiQ=,iv:VpUW3JQtEP1KID6xvgU0LiM6xu49+UPDSufvwvzf2+s=,tag:Wo1KDaz72vHUb96t1kPTig==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:AjBWJ02uDpUmdJaA5ZcfQjhDIi07LzYS/KOU0lRNNw==,iv:DzmTDQNcsqRBUFDTpmgx1IVmJZGpH41XmuwH8YGfPIg=,tag:ib3Tl+U+HkqHed+1xr2h3w==,type:str]
+    #ENC[AES256_GCM,data:1XQhfgbTm/zAoibYuJwHMtb1pZZyazWOJQrxnzf2ekEaLcOfoKNmDSuOm0rhhSiQQzAEHzCpEE2EE2MN8RmJMhZsHCnmcDMxPlCYPLntB3lTSg==,iv:LwiMGoNuH2vEY5bMML79fW8ww8fWiqzjtwakEK5eqHc=,tag:enBqLRqdz9U4YOB2N3Up0g==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:8OTpdwDhXtQoF2fhs/Kb,iv:xU/rQZf5RCwBQonMMgHT10faWkKbkost5AicySTZBiA=,tag:ddVRQ1AwptEuAEzdQTZ8Dw==,type:str]
+    #ENC[AES256_GCM,data:j2EchKpJvoPc7ZQfpU6/JPwREapMZVOXh9EVviz7PXAj,iv:Gy43LiM/UtFtLARwh4y2QLYGAaZjEtJCFucsWQO8QQE=,tag:BmtH3fLNNDL9zVYB2Tkr+Q==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:ssYci3KoFoqWklQlSXkK,iv:3vyr5h4cLbge6USk7rNzypJXqZ3awjXzyjwSRJRklGw=,tag:cns6aa2QRpOqMjDvZIu+/Q==,type:str]
+    #ENC[AES256_GCM,data:wGEDCN4DRLHSBWKqVuMpc3nYqwtteh6JEtrCXPagxGycrUzG7U9uVU49oRvH5KqLsuLo2GoLlTffSf692LSoOWRT9MBQqsG9i0wLiK2nQ2U=,iv:VzJc58WaCEUExnNVQaHoMGv99i1NZCm09nwlNhcdH+U=,tag:TpRUI7blq2ZqmSesSkQ6mw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:7kgasg9p71CLJwuc3NCG,iv:1wIUOM5HBCPKeFLn8IxrVTKlgUNXf7s6O8MrtDzjX4Q=,tag:+r0EPd6Tvf1+s7JeXYXWSQ==,type:str]
+    #ENC[AES256_GCM,data:hy6GlkxveK6yXeu8NZfrVB35AuJUIYRuc5Nq1v6WK9qx8rCqCx3NON4SxfuGbSwTLKKTb7FFb+YsKUAuF1quTgyv3b1+kTSJNAgddmgsoZrrhzs1+kKx,iv:j5Mt6kpMvTb4AaKpQGqY76bDni0uCcm14cIbRdkZq/I=,tag:W50DwEsrMyhYQPTqRlGMeQ==,type:comment]
+    #ENC[AES256_GCM,data:yaEdmLd15Y74o+bCBV41cDKD3z1Btx0Ruh/74GpgNXUM20s13+IoJ92TT7KgMtW0Fmqm6ba6XQ7EtoZBJvW4tSGXv2nPyuqdxPTIEWW78xs5FriRrdhyVcegD0GEE0Mn84RFfoIuoQngt/2KUqXoQJM0l/vUrjF2U17iRw==,iv:IE2DIWCBICAQ4bW0lxsPOzs7fc7G4d2c2cfuKw/PCvc=,tag:k7W/Lp8azerAWAMEfraSeA==,type:comment]
+    #ENC[AES256_GCM,data:W09lJnm5PmzVA/JEZA5vJsEpA8bEfLLOtYBhjIZXYdIQQAr0kLvRX1Ve4Jei6fyRXR/sb6h6Gb4hL4cfOrW5S7j3/KR6kArRY80U4mIViCw=,iv:Ayg+8nkhmH6/EnDtRI/chGvciy4W6FyDnm3/5EC1oqQ=,tag:Uuv9hm/1+abzrnMSmo7J/Q==,type:comment]
+    #ENC[AES256_GCM,data:+ICTHUH1YVQwkM5Ry7VHhsio6t0AGcGtT20Sew/wIFqp+LaUPjv5coC86tK+uNSxzBXBDY+e,iv:kohouYXc+N5tEkstCtUeUTopR3LJGeeXyz+HoUVgruo=,tag:+vWI49CI2HFjkeTQoUdRog==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:/4oo3qUKoA0361RN,iv:+hAXKm/i0rR/AUNITOJzGVMsQxE73IdsV/o+A76mxyY=,tag:+jvZzquU9LdI9rrQ5uBtzg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Cg8hPY2MJAIdJizIgzqHnlA=,iv:u7FCNp3f7PDNQ+LcXwc6ztQ9YkICJx09Z0FVuOBGSnw=,tag:fwf204xGa82QQft6mn7r4Q==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:JWU2vkZdD2JTKD/ltaQXkwRlKysKYae6l7ECsHw4eco=,iv:x5Lrw0cZeQCnw54zduF88tSoZMnwiRrL1cYLxxkCH9M=,tag:ZKrRo1130leqdVxx0B7clg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:mwTEPyHIZVaMCRD/iOtAnmkPuqSlf8h/+5myvLlcx0+rxc0dqjonkw==,iv:dA1+YBXR+ulACo3Pg6tLI6I7rTwqoHOTC5GkzSmRBWo=,tag:I/F69c8kqKNm876IhO/Ong==,type:str]
+    #ENC[AES256_GCM,data:gMOeNhOIfaz4MBkKcFpvnG9kNapPRLUf8m6Jjf2CQjPHYaQpF169L6+WuDvDH3PPmgmkTPtrvfV54nSUygO7cw==,iv:wky/TPEfXgVxbuOqAxbFO6oSDtYXg9W2JOLvwwCTgNk=,tag:NnyICB94Tmot7rp7wEn8CA==,type:comment]
+    #ENC[AES256_GCM,data:DuRbpTH6oWtHD9uCK/bRjSpuKfOOz508zhHBfsoJy6mAR0Q1nINZkrz1tMPqg7nZPSwJgMXyt1U=,iv:yhoYqrP+CSKkAUUPUFHCAxtDYfl2zjqXVRj+/TB2cl4=,tag:+eP9mdZZ9fVR/uoIc/oRLw==,type:comment]
+    #ENC[AES256_GCM,data:DRX/Jk3PUeNC3uBe7r6OoZbH0FIQq+C82g==,iv:Uma8+y7zAjkKANm5snedjuILurf4M84zxs4uBxyLuM8=,tag:o4ENqDwmR1Ii9DuCvFdtPw==,type:comment]
+    #ENC[AES256_GCM,data:EbUVye/RX5vg/czI2C1cHhcSl/YG5MzRqMK5kQpRDxuAlTNqP2l2vkrxisBEW7/yslrGpfEEDnA6S39Rty9l3+5kx2g7fB/8XrhJXDY=,iv:D2AwQUMxekdYpkDqLX79VYSBnGTg/V+7Q7lyfUnC9cA=,tag:z5jtMswthHwV6JCwPc2HOA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:1evt1vcdmoPUSxbjA1MPQoM5MaoWeHK7sOgdQtpYnb3hH7MHaX+GCb0WAs8yPQl7,iv:rUI2lmFV8U4RZLcjgsu3UtgzD0dCktvRV0rImgyfjkM=,tag:JIMpGA6LcWkuJUtDVzjC7Q==,type:str]
+    #ENC[AES256_GCM,data:IxUqcyb0WsQTmVkCUJhw9o8CYZg34lzt8yBr6hX1rgQyzZ3IMyyjBK0LkdovRu+wCr1JH0K0dMJDNDMOtuYqcR+DMEHEt5M=,iv:Fw8+73FV+IXRZtwufhxMFBiQmRAeKg0ycXHmTp5uZYs=,tag:jAxV+roS8NuHCP+l+kUtCw==,type:comment]
+    #ENC[AES256_GCM,data:BMjl1rfXmvhnK6SDt4mY+M51lSvUEQJJ4jrodNCzYM7IteJZr1oYI6L/4y3NjiSSHlUDoxwg,iv:D/kPtSg26bX6mwrUjtwyl7oAyM1LaTAPWBUmlR7KHvQ=,tag:b7fFJkSmND4yLDLGXARN3g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:EBJEkZ6z2w==,iv:i0m2lnI/A6OP33S4yEU6YmAcxsxqeSgEEYAoLLwaTm0=,tag:CC5T/yWinhXIlzRIUV3rnw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:I1VQChL9xd35FBNJnPebCes/9rQ=,iv:zYnA4XsXXivAtYzGxu2tO7hpldcscn4x3iwWO41TsH8=,tag:ufWM1iWSh34IupQmNFQ9AQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:9IUUs750FVwRJIM=,iv:KJkfGyEo1/Ze7kjHWGtCypSyu47bgIvm4VonS9OdQOU=,tag:jKubzT1jjbmuxrI1ntSYMg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:xSZO1ctc64KbLTANQ6uT,iv:mK8rBgabRhY0EfTJC/OHd/VvYhBaFFjnAOg7293/Vy0=,tag:7QFnbba8G5Rwwr5X8IZYVg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:hSE/nO7jGucDPyt8xAC9Yy0PVdrgROGSKg==,iv:x07qzx+lSfUAXRzQZKhEYyaP4+VbB5evF+Kqkqho5+8=,tag:+Dw7skcQ8nqVW9Pqmp4deg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:BEYKiJQMeBEo6Wu6g8BPS9wY44IqKDKQ,iv:dY/rZsIboEkRdkHFtk1prRX6+tkxDQXodufiPqo/VIA=,tag:/OPcDvv8y3lu9FKQg5ILtg==,type:str]
+    #ENC[AES256_GCM,data:8z1piGeFdDia9Q+pNYH3wuHYg3v4FC/NfpnAukc9EMBuiJROTT8=,iv:8jMJrf2Onar/nZ1Ssc8QtQRoP93jtPwV02W7gy7oeZ4=,tag:RgAcaydfpnixwqhPYByw4w==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:I1EmYmNqgQig4ocNdHpKfZpiwK8=,iv:kqm9iLCeXx6duyRK/PmKaY2qed08TWoxOvkJNuj9H+g=,tag:lHlLj1bFXeBt2bStFlgkLg==,type:str]
+    #ENC[AES256_GCM,data:SIlakBcx7LQgOdJulUs=,iv:C1fimXxLKLQpZlvsK88xC/j/GHQqxVxcx7Vg3dYAo2U=,tag:z65Ckr0ZsvBqn2k0NYkmgw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Ypsqr+ouBS6aRbgGHA==,iv:itdQjy9TJbVVO8oww1ekSDGnttx5E1Bm9Ek4Utyuxbs=,tag:9ftxmlN7oHWyvNvn2SmzTw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:6GHxN5jbKOLzlfGM6Q==,iv:GN4zq42omTDogSwvEJqS2diuPteeI/N+smKP6ewYOUM=,tag:ZsmwOdaHA5vjiAXAE5YS8w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:a7MpOA==,iv:hR3/wsPaorssdpkHuH25dm0kboBMrypGPoeRL3xvHFk=,tag:d+U7GhGlM2KMwQeMrFufRw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBabkIvbC9uVzlzTlBWUWFj
-            VC81bFpPcExPWTgzZlFKc0NzTWZWUEg4c3d3Cml4U2FhRElsSjE3MnNtOHBJTEdj
-            MXk3bzd3NnRtbDFiQXpEY1cvU3k0bVEKLS0tIGlRNWFIeG5CaGFhdUM4SXZkSTlH
-            Ulo3anJVSFFEc2h2MzdPZmpnV1FPK1UKdhA2xQdlmz6PDH3hAbLx9x/Jr558PjKG
-            M5Y/uudNdUv17ffaZhqdwEmfUzP32QK9vzG8NK3kl8vTATAdr7KJ5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Z2NXcUFUWGpjTUpDNzUy
+            T0Ird2h0WGhodUFNQUp4bFRydUVsNUF3RzA4CldEK1ZKWGltb2xlUmhtTTBqWWk4
+            OFRFaUZaQ25RYTAwUmpJbHJ3SzRMaDAKLS0tIFB3aFBocTg1bDZFc1BTelRjckNF
+            N2JNWHRqUmpoemp4WVNIdGVXSUxWNEkKaugNhf3eCeDJoGbW7obKRzt48mr9Z1zk
+            MjpHZjevwPzv/RVAVGglrzlUU9d1rQzDjilqfC2L+ljDYYsdkaIlrA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:46:27Z"
-    mac: ENC[AES256_GCM,data:GzG2BPEc2OLQ4z8p/12wwlDWu6nUgt47VshQd5jrZmVFJwH9cGQ/p+In7zuLwbAl+EjqXXkp26IqV2ca06PHK7TvRHkDsYqRZm5lR8PrR6DRHq0IRb6KifVtdAiQrbk/qZtI2abk2pb/l33vF31dGXEAQonSHvs9KuFnH8M4AOU=,iv:eFU/TXgnhUCFNsFPow33wq0r7z2FyJN9Kzl7SWua7oY=,tag:L+eu/wvthmpHjAQ2VfV5Xw==,type:str]
+    lastmodified: "2025-01-10T23:48:01Z"
+    mac: ENC[AES256_GCM,data:HYjiVK/eW4aDOpMbshrsl33B2HWqkOPJNntiOzF5eByFwg5kexMfFqdugOEJh3TpC3UiTtNuMyN4ZLXp4titVrWv8B1eDsOdUBqO4444XA37J4BMUA5YwUF3JFuRAC/GinMaMF2zWNwdc+j+WCg1swDSljT96OuSdp/c/KLA5TU=,iv:c2P5UqXEahT7YDWAPj7YJ/23U2zQ2J7F841sFAnf5HU=,tag:giNFWtG5dVTcoap8CK9J2A==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
